GNOME Bugzilla – Bug 688130
Compilation error when debugging disabled
Last modified: 2012-11-12 08:30:39 UTC
When compiling after configuring using --disable-gst-debug I see the following: CC libgstreamer_1.0_la-gstinfo.lo gstreamer/gst/gstinfo.c:1981: error: conflicting types for 'gst_debug_set_threshold_from_string' gstreamer/gst/gstinfo.h:349: error: previous declaration of 'gst_debug_set_threshold_from_string' was here make[6]: *** [libgstreamer_1.0_la-gstinfo.lo] Error 1 The attached patch fixed the compilation error which occurs because the function prototype has changed (but only in the code used when debugging is enabled).
Created attachment 228742 [details] [review] Proposed patch for compiler errors.
commit 7691a82f3a549a60f3cc41b36d05abc9b0f629a4 Author: Sebastian Rasmussen <sebrn@axis.com> Date: Mon Nov 12 01:40:42 2012 +0100 info: fix compiler warning when debugging disabled Fixes https://bugzilla.gnome.org/show_bug.cgi?id=688130