info: fix compiler warning when debugging disabled

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=688130